--- a/ablaufplan.html
+++ b/ablaufplan.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ablaufplan</title>
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💒</text></svg>">
   <link href="style.css" rel="stylesheet">
   <script src="admin.js"></script>
 </head>
@@ -118,26 +119,6 @@
       </div>
       <!-- ABLAUFPLAN_CONTENT_END -->
 
-      <div class="schedule-info">
-        <h2>Wichtige Hinweise</h2>
-        <div class="info-boxes">
-          <div class="info-box">
-            <div class="info-box-icon">⏰</div>
-            <h3>Pünktlichkeit</h3>
-            <p>Bitte seid rechtzeitig vor Ort, damit wir pünktlich beginnen können. Plant genügend Zeit für die Anreise ein.</p>
-          </div>
-          <div class="info-box">
-            <div class="info-box-icon">👔</div>
-            <h3>Dresscode</h3>
-            <p>Festliche Kleidung erwünscht. Für die Damen: Cocktailkleid oder elegantes Kleid. Für die Herren: Anzug.</p>
-          </div>
-          <div class="info-box">
-            <div class="info-box-icon">🚗</div>
-            <h3>Parkmöglichkeiten</h3>
-            <p>Am Pfarrheim stehen ausreichend Parkplätze zur Verfügung. Bitte nutzt auch Fahrgemeinschaften.</p>
-          </div>
-        </div>
-      </div>
     </section>
   </main>
 
