--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Startseite - Unsere Hochzeit</title>
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💒</text></svg>">
   <link href="style.css" rel="stylesheet">
   <script src="admin.js"></script>
 </head>
@@ -132,6 +133,10 @@
         <h2>Liebe Familie & Freunde</h2>
         <p>Wir möchten diesen besonderen Tag mit den Menschen feiern, die uns am Herzen liegen. Auf dieser Website findet ihr alle wichtigen Informationen zur Hochzeit – vom Ablauf über das Menü bis hin zu Fotos und Gästebuch.</p>
         <p>Klickt euch durch die verschiedenen Bereiche und meldet euch rechtzeitig an. Wir freuen uns auf euch!</p>
+        <div class="cta-box">
+          <p class="cta-text">⏰ <strong>Wichtig:</strong> Bitte meldet euch bis zum 01. Mai 2026 an!</p>
+          <a href="anmeldung.html" class="cta-button">Jetzt zur Hochzeit anmelden</a>
+        </div>
         <p class="message-signature">Eure Jenica & Christian 💕</p>
       </div>
     </section>
