--- a/termine.html
+++ b/termine.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Termine & Orte</title>
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💒</text></svg>">
   <link href="style.css" rel="stylesheet">
   <script src="admin.js"></script>
 </head>
@@ -67,7 +68,6 @@
               <span><strong>Ort:</strong> Standesamt Kaiserslautern</span>
             </div>
           </div>
-          <div class="event-badge">Nur geladene Gäste</div>
         </article>
 
         <article class="event-card featured">
@@ -86,7 +86,8 @@
             </div>
             <div class="detail-item">
               <span class="detail-icon">📍</span>
-              <span><strong>Ort:</strong> Katholisches Pfarrheim Dansenberg</span>
+              <span><strong>Ort:</strong> Katholisches Pfarrheim Dansenberg<br>
+              <small class="address-detail">Hautzenbergstraße 4, 67661 Kaiserslautern-Dansenberg</small></span>
             </div>
           </div>
           <a href="https://www.google.com/maps/search/?api=1&query=Katholisches+Pfarrheim+Dansenberg" target="_blank" class="map-button">
@@ -102,16 +103,7 @@
           <div class="location-card-icon">🚗</div>
           <h3>Mit dem Auto</h3>
           <p class="location-tip">Das Katholische Pfarrheim Dansenberg ist gut mit dem Auto erreichbar. Ausreichend Parkplätze sind vorhanden.</p>
-          <p class="location-tip">💡 Tipp: Bildet gerne Fahrgemeinschaften!</p>
         </div>
-      </div>
-    </section>
-
-    <section class="arrival-note">
-      <div class="note-box">
-        <div class="note-icon">⏰</div>
-        <h3>Bitte kommt pünktlich!</h3>
-        <p>Plant genügend Zeit für die Anfahrt ein, damit wir pünktlich beginnen können. Wir freuen uns auf euch!</p>
       </div>
     </section>
   </main>
