--- a/danksagung.html
+++ b/danksagung.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Danksagung</title>
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💒</text></svg>">
   <link href="style.css" rel="stylesheet">
   <script src="admin.js"></script>
 </head>
@@ -74,6 +75,14 @@
         <p>Eure Anwesenheit und eure Liebe haben unseren Tag perfekt gemacht. Wir fühlen uns gesegnet, euch alle in unserem Leben zu haben.</p>
         <p class="signature">Mit liebevollen Grüßen,<br><strong>Jenica & Christian</strong></p>
       </div>
+
+      <!-- Admin-Only Paar-Foto Platzhalter -->
+      <div class="admin-only-image thanks-couple-photo">
+        <div class="couple-photo-container">
+          <img src="https://images.unsplash.com/photo-1522673607200-164d1b6ce486?w=800&h=600&fit=crop" alt="Jenica & Christian" loading="lazy">
+          <p class="admin-label">🔒 Admin: Paarfoto-Platzhalter</p>
+        </div>
+      </div>
     </section>
   </main>
 
@@ -92,6 +101,13 @@ document.addEventListener('DOMContentLoaded', () => {
       <h1>Danksagung</h1>
       <p class="gratitude-lead">Diese Seite wird nach unserer Hochzeit am 16. Mai 2026 verfügbar sein. Wir freuen uns darauf, uns dann bei euch allen zu bedanken!</p>
     `;
+  }
+
+  // Admin-Only Bilder anzeigen
+  if (window.isAdminMode && window.isAdminMode()) {
+    document.querySelectorAll('.admin-only-image').forEach(el => {
+      el.style.display = 'block';
+    });
   }
 });
 </script>
