--- a/danksagung.html
+++ b/danksagung.html
@@ -77,11 +77,11 @@
         <p class="signature">Mit liebevollen Grüßen,<br><strong>Jenica & Christian</strong></p>
       </div>
 
-      <!-- Admin-Only Paar-Foto Platzhalter -->
+      <!-- Admin-Only Paar-Foto -->
       <div class="admin-only-image thanks-couple-photo">
         <div class="couple-photo-container">
-          <img src="https://images.unsplash.com/photo-1522673607200-164d1b6ce486?w=800&h=600&fit=crop" alt="Jenica & Christian" loading="lazy">
-          <p class="admin-label">🔒 Admin: Paarfoto-Platzhalter</p>
+          <img src="Bilder/Das-sind-wir-2.jpeg" alt="Jenica & Christian" loading="lazy">
+          <p class="admin-label">🔒 Admin: Paarfoto</p>
         </div>
       </div>
     </section>
