--- a/anmeldung.html
+++ b/anmeldung.html
@@ -35,12 +35,11 @@
 
     <section class="rsvp-form-section">
       <h2>Jetzt anmelden</h2>
-      <form id="anmeldungForm">
+      <form id="anmeldungForm" action="#" method="post">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required>
         <button type="submit">Anmelden</button>
       </form>
-      <div id="anmeldungStatus"></div>
 
   <main>
     <section class="rsvp-hero">
